@@ -58,7 +58,7 @@ public:
 	virtual AudioMapping audio_mapping () const = 0;
 	virtual void set_audio_mapping (AudioMapping) = 0;
 
-	void analyse_audio (boost::function<void()>);
+	boost::signals2::connection analyse_audio (boost::function<void()>);
 	boost::filesystem::path audio_analysis_path () const;
 
 	void set_audio_gain (float);
